--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <label for="cidade">Cidade</label>
         <input type="text" id="cidade" name="cidade">
          <label for="estado">Estado</label>
-        <input type="text" id="Estado" name="estado">
+        <input type="text" id="estado" name="estado">
          <label for="lagadouro">Lagadouro</label>
         <input type="text" id="lagadouro" name="lagadouro">
          <label for="bairro">Bairro</label>
